--- a/root/registerError.html
+++ b/root/registerError.html
@@ -15,6 +15,11 @@
                         <div align="center"><input type="password" name="password" placeholder="用户密码" required="required"></div><br/>
                         <div align="center"><button type="submit">注册</button></div>
                 </form>
+	<br/>
+		<form action="a" method="post">
+        	    <div align="center"><button type="submit" >删除账号</button></div>
+	        </form>
+	<br/>
 		<div  align="center">提示：该用户名被注册.</div>
         </div>
     </body>
