--- a/root/logError.html
+++ b/root/logError.html
@@ -15,7 +15,11 @@
                         <div align="center"><input type="password" name="password" placeholder="登录密码" required="required"></div><br/>
                         <div align="center"><button type="submit">确定</button></div>
                 </form>
-		<br/>
+	<br/>
+		<form action="b" method="post">
+        	    <div align="center"><button type="submit" >修改密码</button></div>
+	        </form>
+	<br/>
                <div  align="center">提示：用户名或密码错误，请重试</div>
         </div>
     </body>
