--- a/root/deleteUserError.html
+++ b/root/deleteUserError.html
@@ -10,7 +10,7 @@
     <div align="center"><font size="5"> <strong>注销账号</strong></font></div>
     <br/>
         <div class="delete">
-                <form action="dCGISQL.cgi" method="post">
+                <form action="cCGISQL.cgi" method="post">
                         <div align="center"><input type="text" name="user" placeholder="用户名" required="required"></div><br/>
                         <div align="center"><input type="password" name="password" placeholder="新密码" required="required"></div><br/>
                         <div align="center"><button type="submit">确定</button></div>
